--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -7,16 +7,11 @@
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href='/')
-        i.fa.fa-cube
-        | Project name
+        | ⇌ Book swap
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         li(class=(title == 'Home') ? 'active' : undefined)
           a(href='/') Home
-        li(class=(title == 'API Examples') ? 'active' : undefined)
-          a(href='/api') API Examples
-        li(class=(title == 'Contact') ? 'active' : undefined)
-          a(href='/contact') Contact
         li
           a(href='/status') Status
       ul.nav.navbar-nav.navbar-right
@@ -36,7 +31,13 @@
               i.caret
             ul.dropdown-menu
               li
-                a(href='/account') My Account
+                a(href='/account') Account settings
+              li.divider
+              li
+                a(href='/books') Books shared
+              li.divider
+              li 
+                a(href='/trades') View my trades
               li.divider
               li
                 a(href='/logout') Logout
