--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6717,7 +6717,8 @@ html {
 
 body {
   padding-top: 60px;
-  margin-bottom: 75px; }
+  margin-bottom: 75px;
+  font-family: 'Open Sans', sans-serif; }
 
 footer {
   position: absolute;
@@ -6727,6 +6728,12 @@ footer {
   line-height: 45px; }
   footer p, footer ul {
     margin-bottom: 0; }
+
+a, a:hover, a:visited, a:active {
+  color: #d83c30; }
+
+button {
+  background-color: #d83c30; }
 
 textarea {
   resize: vertical; }
@@ -6743,6 +6750,9 @@ textarea {
   padding: 0;
   border-radius: 0;
   box-shadow: 0 0 5px #ccc, inset 0 0 0 #000; }
+
+.fa {
+  margin-right: 6px; }
 
 #book-list {
   list-style: none; }
