--- a/views/home.pug
+++ b/views/home.pug
@@ -1,20 +1,23 @@
 extends layout
-
+block links
+  link(rel='stylesheet', href='/css/home.css')
 block content
-  h1 Book Swap
-  p.lead A trading post for beloved books
-  hr
-  .row
+  .row.main-intro
+    p.lead A trading post for beloved books
+  .row.main-description
     .col-sm-3
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      h2 Share
+      i.fa.fa-paper-plane-o.fa-5x(aria-hidden='true')
+      p Let others know about your beloved collection of books. Once you post books you've read, other users can look at your general likings and start meaningful trades.
     .col-sm-3
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      h2 View
+      i.fa.fa-book.fa-5x(aria-hidden='true')
+      p Click on any book to view details including feedback from the book owner themselves. Be inspired to pick up a new book and start an adventure!
     .col-sm-3
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+      h2 Request a trade
+      i.fa.fa-arrows-h.fa-5x(aria-hidden='true') 
+      p Convinced that you want that book? Request a trade with the owner immediately, offering them a book they may enjoy in return.
     .col-sm-3
-      h2 Heading
-      p Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-  hr
+      h2 Start reading!
+      i.fa.fa-check-circle-o.fa-5x(aria-hidden='true')
+      p Once you have received your book, enjoy! You may also repeat the process with the same book or keep it. Your choice!
