--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,12 +4,13 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    meta(name='theme-color' content='#53777A')
     meta(name='csrf-token', content=_csrf)
     title #{title}
     link(rel='shortcut icon', href='/favicon.png')
+    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN", crossorigin="anonymous")
+    link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Open+Sans:300')
     link(rel='stylesheet', href='/css/main.css')
-
+    block links
   body
     include partials/header
 
