--- a/views/books/new.pug
+++ b/views/books/new.pug
@@ -4,20 +4,26 @@ block content
   .page-header
       h1 Add book
       p.lead Add a book to your collection
-
-  form.form-horizontal(method='POST')
-    input(type='hidden', name='_csrf', value=_csrf)
-    .form-group
-      label.col-sm-3.control-label(for='Title') Title
-      .col-sm-7
-        input.form-control(ng-model='title', type='title', name='title', id='title', placeholder='Title', autofocus, required)
-    .form-group
-      label.col-sm-3.control-label(for='Author') Author
-      .col-sm-7
-        input.form-control(ng-model='author', type='author', name='author', id='author', placeholder='author', required)
-    a(ng-click='') Search 
-    .form-group
-      .col-sm-offset-3.col-sm-7
-        button.btn.btn-success(type='submit')
-          i.fa.fa-user-plus
-          | Add
+  div(ng-app='bookApp')
+    form.form-horizontal(method='POST', ng-controller='BookController')
+      input(type='hidden', name='_csrf', value=_csrf)
+      .form-group
+        label.col-sm-3.control-label(for='Title') Title
+        .col-sm-7
+          input.form-control(ng-model='title', type='title', name='title', id='title', placeholder='Title', autofocus, required)
+      button.btn.btn-primary(type='button', ng-click='searchBook()') Search
+      div(ng-show='showBooks')
+        .col-md-2(ng-repeat='book in books track by $id($index)')
+        .form-group
+          label.col-sm-3.control-label(for='Author') Author
+          .col-sm-7
+            input.form-control(type='author', name='author', id='author', placeholder='author', required)
+        .form-group
+          label.col-sm-3.control-label(for='Description') Description
+          .col-sm-7
+            textarea.form-control(type='description', name='description', id='description', placeholder='description', required)    
+        .form-group
+          .col-sm-offset-3.col-sm-7
+            button.btn.btn-success(type='submit')
+              i.fa.fa-user-plus
+              | Add
