--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,7 @@ html
 
     include partials/footer
 
+    script(src='/socket.io/socket.io.js')
     script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js')
     script(src='/js/lib/jquery-3.1.1.min.js')
     script(src='/js/lib/bootstrap.min.js')
