Update search method and change book addition page

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,6 +1,10 @@
 body {
-  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("https://static.pexels.com/photos/486841/pexels-photo-486841.jpeg");
-  background-size: 100%;
+  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("https://static.pexels.com/photos/486841/pexels-photo-486841.jpeg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: left top; }
 
@@ -18,5 +22,4 @@ body {
 
 i {
   color: gray;
-  text-align: center;
-  -webkit-text-stroke: 2px lightgray; }
+  text-align: center; }
