--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -1,9 +1,13 @@
 body {
-  background: linear-gradient(
+    background: linear-gradient(
     rgba(255, 255, 255, 0.70), 
     rgba(255, 255, 255, 0.70)
-  ), url('https://static.pexels.com/photos/486841/pexels-photo-486841.jpeg');
-  background-size: 100%;
+  ), url('https://static.pexels.com/photos/486841/pexels-photo-486841.jpeg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: left top;
 }
@@ -28,5 +32,4 @@ body {
 i {
   color: gray;
   text-align: center;
-  -webkit-text-stroke: 2px lightgray;
 }
