--- a/views/home.pug
+++ b/views/home.pug
@@ -4,7 +4,7 @@ block links
 block content
   .row.main-intro
     p.lead A trading post for beloved books
-  .row.main-description
+  .row.main-description.text-center
     .col-sm-3
       h2 Share
       i.fa.fa-paper-plane-o.fa-5x(aria-hidden='true')
@@ -14,10 +14,10 @@ block content
       i.fa.fa-book.fa-5x(aria-hidden='true')
       p Click on any book to view details including feedback from the book owner themselves. Be inspired to pick up a new book and start an adventure!
     .col-sm-3
-      h2 Request a trade
+      h2 Trade
       i.fa.fa-arrows-h.fa-5x(aria-hidden='true') 
       p Convinced that you want that book? Request a trade with the owner immediately, offering them a book they may enjoy in return.
     .col-sm-3
-      h2 Start reading!
+      h2 Read
       i.fa.fa-check-circle-o.fa-5x(aria-hidden='true')
       p Once you have received your book, enjoy! You may also repeat the process with the same book or keep it. Your choice!
