--- a/public/css/home.css
+++ b/public/css/home.css
@@ -11,15 +11,18 @@ body {
 .main-intro {
   padding: 5% 0%; }
   .main-intro p {
-    font-size: 5em; }
+    font-size: 4em; }
 
 .main-description h2 {
   color: #d83c30;
-  font-weight: 300; }
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: bold; }
 
 .main-description p {
-  font-size: 1.5em; }
+  font-size: 1.5em;
+  text-align: left; }
 
-i {
+.main-description i {
   color: gray;
-  text-align: center; }
+  margin: 20px; }
