--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -14,7 +14,7 @@ body {
 
 .main-intro {
   p {
-    font-size: 5em;
+    font-size: 4em;
   }
   padding: 5% 0%;
 }
@@ -22,14 +22,17 @@ body {
 .main-description {
   h2 {
     color: #d83c30;
-    font-weight: 300;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    font-weight: bold;
   }
   p {
     font-size: 1.5em;
+    text-align: left;
+  }
+  i {
+    color: gray;
+    margin: 20px;
   }
 }
 
-i {
-  color: gray;
-  text-align: center;
-}
