--- a/public/css/themes/modern/_variables.scss
+++ b/public/css/themes/modern/_variables.scss
@@ -19,8 +19,8 @@ $brand-info: #5bc0dd;
 // -------------------------
 
 $font-size-base: 13px;
-$headings-font-family: 'Montserrat', sans-serif;
-$headings-font-weight: 700;
+$headings-font-family: 'Open Sans', sans-serif;
+$headings-font-weight: 300;
 $text-color: $gray-darker;
 $link-color: $brand-primary;
 $link-hover-color: $gray-darker;
