--- a/views/books/view.pug
+++ b/views/books/view.pug
@@ -13,7 +13,7 @@ block content
       h4 Add a book
     #book-list
       each book in books
-        .col-md-2
+        .book.col-md-2
           h4 #{book.title}
           p #{book.author}
           a(href='/book/' + book._id)
