--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -84,6 +84,9 @@ textarea {
   .book {
     cursor: pointer;
     margin: 2.5%;
+    a:hover {
+      text-decoration: none;
+    }
   }
   h4 {
     font-weight: bold;
