--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -14,6 +14,8 @@
           a(href='/') Home
         li(class=(title == 'View') ? 'active' : undefined)
           a(href='/view') View
+        li(class=(title == 'Add') ? 'active' : undefined)
+          a(href='/new') Add
       ul.nav.navbar-nav.navbar-right
         if !user
           li(class=(title == 'Login') ? 'active' : undefined)
