--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -83,7 +83,7 @@ textarea {
   flex-wrap: wrap;
   .book {
     cursor: pointer;
-    margin: 2.5%;
+    margin: 2.5% 0%;
     a:hover {
       text-decoration: none;
     }
