--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("https://static.pexels.com/photos/486841/pexels-photo-486841.jpeg") no-repeat center center fixed;
+  background: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url("/img/homebg.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
