--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -2,7 +2,7 @@ body {
     background: linear-gradient(
     rgba(255, 255, 255, 0.70), 
     rgba(255, 255, 255, 0.70)
-  ), url('https://static.pexels.com/photos/486841/pexels-photo-486841.jpeg') no-repeat center center fixed; 
+  ), url('/img/homebg.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
