--- a/views/home.pug
+++ b/views/home.pug
@@ -15,7 +15,7 @@ block content
       p Click on any book to view details including feedback from the book owner themselves. Be inspired to pick up a new book and start an adventure!
     .col-sm-3
       h2 Trade
-      i.fa.fa-arrows-h.fa-5x(aria-hidden='true') 
+      i.fa.fa-exchange.fa-5x(aria-hidden='true')
       p Convinced that you want that book? Request a trade with the owner immediately, offering them a book they may enjoy in return.
     .col-sm-3
       h2 Read
