--- a/public/css/home.css
+++ b/public/css/home.css
@@ -6,7 +6,8 @@ body {
   background-size: cover;
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  background-position: left top; }
+  background-position: left top;
+  overflow-y: hidden; }
 
 .main-intro {
   padding: 5% 0%; }
