--- a/public/css/home.scss
+++ b/public/css/home.scss
@@ -10,6 +10,7 @@ body {
   background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: left top;
+  overflow-y:hidden;
 }
 
 .main-intro {
