--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,3 +1,3 @@
 footer
   .container.text-center
-     a(href='https://github.com/mishellscripts/book-swap') GitHub Project
+     a(style='color: #d83c30', href='https://github.com/mishellscripts/book-swap') GitHub Project
